--- a/website 1/index.html
+++ b/website 1/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,28 +8,39 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header style="position:sticky;">
-        <nav class="head-nav" >
-            <ul style="display: flex; gap: 25px; list-style: none; justify-content: center; align-items: center; " class="ul1">
+        <nav class="head-nav">
+            <ul style="display: flex; gap: 25px; list-style: none; justify-content: center; align-items: center; "
+                class="ul1">
 
-                <li class="logo" >
+                <li class="logo">
                     <span>{() => fs}</span>
                 </li>
                 <li>About course</li>
                 <li>Course contents</li>
                 <li>FAQ</li>
-                <li>Partners</li>   
+                <li>Partners</li>
                 <li>Challenge</li>
             </ul>
 
-            <ul style="display: flex; gap: 5px; list-style: none; justify-content: center; align-items: center;gap: 20px;" class="ul2">
+            <ul style="display: flex; gap: 5px; list-style: none; justify-content: center; align-items: center;gap: 20px;"
+                class="ul2">
                 <li><img src="icons8-search-50.png" alt="" width="30"></li>
                 <li><img src="moon.png" alt="" width="30"></li>
                 <li>
-                    <select name="" id="" style="padding: 5px; background-color: #fff; font-size: 20px;" class="select-btn">
+                    <select name="" id="" style="padding: 5px; background-color: #fff; font-size: 20px;"
+                        class="select-btn">
                         <option value="en">English</option>
                         <option value="zh">中文</option>
                         <option value="es">Español</option>
@@ -47,11 +59,13 @@
     <main class="main-page">
 
         <section class="section1">
-            <div class="section1-div1" >
+            <div class="section1-div1">
                 <h1>Deep Dive Into Modern Web Development</h1>
                 <span class="span1">Full Stack open</span>
                 <button>Start course</button>
-                <span class="span2">Learn React, Redux, Node.js, MongoDB, GraphQL and TypeScript in one go! This course will introduce you to modern JavaScript-based web development. The main focus is on building single page applications with ReactJS that use REST APIs built with Node.js.</span>
+                <span class="span2">Learn React, Redux, Node.js, MongoDB, GraphQL and TypeScript in one go! This course
+                    will introduce you to modern JavaScript-based web development. The main focus is on building single
+                    page applications with ReactJS that use REST APIs built with Node.js.</span>
 
             </div>
 
@@ -64,20 +78,55 @@
         <section class="section2">
             <div class="section2-div1">
                 <h2>Announcements</h2>
-                <span>Questions about the course? Read carefully Part 0, that has an answer to most of them...</span>
-                <span>No more yearly versions, the course just continues without any break! See here for more details.
+                <span style="font-style: italic;">Questions about the course? Read carefully Part 0, that has an answer
+                    to most of them...</span>
+                <span style="font-style: italic;">No more yearly versions, the course just continues without any break!
+                    See here for more details.
                 </span>
-                <span>You can discuss the course and related topics in our dedicated group on Discord https://study.cs.helsinki.fi/discord/join/fullstack. Please join the conversation!
+                <span style="font-style: italic;">You can discuss the course and related topics in our dedicated group
+                    on Discord https://study.cs.helsinki.fi/discord/join/fullstack. Please join the conversation!
                     <li> See here how to ask questions in a proper way</li>
-                   </span>
+                </span>
             </div>
 
             <div class="section2-div2">
                 <h2>Authors and License</h2>
-                <span>Parts 0-8 and 13 of the course material is written by Matti Luukkainen. The content of part 9 is written by developers from Terveystalo. Part 10 is written by Kalle Ilves. The content of part 11 is written by developers from Smartly and part 12 is by Jami Kousa. Numerous people have improved and corrected the material both in content and spelling. You can also make improvements to the course material yourself. The course webpage is designed and created by Houston inc, who have also audited the content of the course material. Chinese translation by Zhang Wei. Spanish translation by Sebastian Torres, Cynthia Vico Vacca and Pablo Maffioli with the support of FrontendCafé.</span>
-                <span>The course material is licensed under Creative Commons BY-NC-SA 3.0 license, which means that you are free to use and distribute the material, as long as the names of the original authors are not removed. If you make changes to the material and want to distribute the modified version, it must be licensed under the same license. Using the material for commercial purposes is forbidden without permission.</span>
+                <span>Parts 0-8 and 13 of the course material is written by Matti Luukkainen. The content of part 9 is
+                    written by developers from Terveystalo. Part 10 is written by Kalle Ilves. The content of part 11 is
+                    written by developers from Smartly and part 12 is by Jami Kousa. Numerous people have improved and
+                    corrected the material both in content and spelling. You can also make improvements to the course
+                    material yourself. The course webpage is designed and created by Houston inc, who have also audited
+                    the content of the course material. Chinese translation by Zhang Wei. Spanish translation by
+                    Sebastian Torres, Cynthia Vico Vacca and Pablo Maffioli with the support of FrontendCafé.</span>
+                <span>The course material is licensed under Creative Commons BY-NC-SA 3.0 license, which means that you
+                    are free to use and distribute the material, as long as the names of the original authors are not
+                    removed. If you make changes to the material and want to distribute the modified version, it must be
+                    licensed under the same license. Using the material for commercial purposes is forbidden without
+                    permission.</span>
             </div>
         </section>
     </main>
+
+    <footer class="footer-section">
+        <div class="footer-section-div1">
+            <span>The University of Helsinki is the oldest and largest science university in Finland, with an
+                international scientific community of 40,000 people.</span>
+            <span>Full stack open
+                <a href="mailTo: matti.luukkainen@helsinki.fi"> matti.luukkainen@helsinki.fi</a>
+               </span>
+            <ul>
+                <li>X</li>
+                <li>GitHub</li>
+                <li>Facebook</li>
+                <li>YT</li>
+            </ul>
+        </div>
+        <div class="footer-section-div2">
+            <span>.HOUSTON.INC</span>
+            <span>The Finnish Houston Inc. is an agile software company founded in 2003. We design and implement customized digital services for your business.</span>
+            <span>The material is licensed under the Creative Commons BY-NC-SA 3.0 License.</span>
+        </div>
+    </footer>
 </body>
+
 </html>
