--- a/website 2/index.html
+++ b/website 2/index.html
@@ -24,7 +24,7 @@
             <nav>
                 <ul style="display: flex; gap: 20px; list-style: none; justify-content: center; align-items: center;">
                     <li style="font-size: 1.25rem; font-weight: 200;"><a href="#" style="text-decoration: none; color: black;">Login</a></li>
-                    <li><button style="padding: 8px; background-color:#5AE4A7; border: none; font-size: 1.25rem; font-weight: bold; border-radius:10px; cursor: pointer;">Get CalcUp</button></li>
+                    <li><button style="padding: 8px; background-color:#5AE4A7; border: none; font-size: 1.25rem; font-weight: bold; border-radius:10px; cursor: pointer;" id="scrollToForm">Get CalcUp</button></li>
                 </ul>
             </nav>
         </div>
@@ -35,32 +35,39 @@
             <div style="display: flex; flex-direction: column; max-width: 50%; margin: auto;">
                 <h1 style="font-size: 4rem; ">Unlock Your Mental Maths Superpower!</h1>
                 <p style="font-size: 1.5rem; margin-top: 2rem; width: 35rem;">Master quick calculations through fun, gamified practice. Join thousands improving their math skills daily.</p>
-                <button style="padding: 8px; background-color:#5AE4A7; border: none; font-size: 1.25rem; font-weight: bold; border-radius:10px; width: 20%;">Get CalcUp</button>
+                <button style="padding: 8px; background-color:#5AE4A7; border: none; font-size: 1.25rem; font-weight: bold; border-radius:10px; width: 20%;" id="scrollToForm">Get CalcUp</button>
             </div>
             <div>
                 <img src="heroPic.jpg" alt="A man solving questions with a pen in right hand" width="500" style="padding: 2rem;">
             </div>
         </section>
 
-        <section style="height: 100vh; display:flex; flex-direction: column; align-items: center; justify-content:center;">
+        <section id="form" style="height: 100vh; display:flex; flex-direction: column; align-items: center; justify-content:center;  ">
             <h2 style="text-align: center; font-size: 2rem; font-weight: 500;">Register now to become an early user</h2>
-            <form style="display: flex; flex-direction: column; gap: 20px; margin-top: 4rem; align-items: center;">
-                <div style="display: flex; flex-direction: column;  width: 20rem;">
-                    <label for="username">Name</label>
-                    <input type="text" name="username" id="username" placeholder="Anirudh Parmar">
+            <form style="display: flex; flex-direction: column; gap: 20px; margin-top: 4rem; align-items: center; padding: 30px; border: 2px solid #181717; border-radius: 10px;">
+                <div style="display: flex; flex-direction: column;  width: 20rem; gap: 6px;">
+                    <label for="username" style="font-size: 1.5rem;">Name</label>
+                    <input type="text" required name="username" id="username" style="padding: 10px; border: 2px solid gray; border-radius: 8px;" placeholder="Anirudh Parmar">
 
                 </div>
 
-                <div style="display: flex; flex-direction: column; width: 20rem;">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email" placeholder="anirudhparmar69@gmail.com">
+                <div style="display: flex; flex-direction: column; width: 20rem; gap: 6px;">
+                    <label for="email" style="font-size: 1.5rem;">Email</label>
+                    <input type="email" required name="email" id="email" style="padding: 10px; border: 2px solid gray;  border-radius: 8px;" placeholder="anirudhparmar69@gmail.com">
 
                 </div>
 
-                <button type="submit" style="width: 50%; margin-top: 5%;">Start Improving Now</button>
+                <button type="submit" style="width: 50%; margin-top: 5%; padding: 9px; border-radius: 10px; color: black; background-color: #5AE4A7; box-shadow:5px 5px #181717;">Start Improving Now</button>
             </form>
         </section>
     </main>
     
 </body>
+
+<script>
+    document.getElementById('scrollToForm').addEventListener('click',(e)=>{
+        e.preventDefault()
+        document.getElementById('form').scrollIntoView({behavior:"smooth"})
+    })
+</script>
 </html>
