home page with recipes created

--- a/website 3/starter/index.html
+++ b/website 3/starter/index.html
@@ -18,32 +18,88 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <header>
-      <nav class="navbar">
-        <div class="nav-center" >
-          <!-- header -->
-           <div class="nav-header">
-            <a href="index.html" class="nav-logo">
-              <img src="./assets/logo.svg" alt="simply recipes">
-            </a>
-            <button type="button" class="btn nav-btn">
-              <i class="fas fa-align-justify"></i>
-            </button>
-           </div>
-           <!-- links -->
-           <div class="nav-links" >
-              <ul class="nav-links-ul"  >
-                <li ><a style="color: black;" href="index.html"  class="nav-link">Home</a></li>
-                <li ><a style="color: black;" href="about.html"  class="nav-link">About</a></li>
-                <li ><a style="color: black;" href="tags.html"  class="nav-link">Tags</a></li>
-                <li ><a style="color: black;" href="recipes.html"  class="nav-link">Recipes</a></li>
-              </ul>
-            <div class="nav-link contact-link">
-              <a href="contact.html" class="btn" style="color: white;">Contact</a>
-            </div>
-           </div>
+    <!-- nav -->
+    <nav class="navbar">
+      <div class="nav-center">
+        <div class="nav-header">
+          <a href="index.html" class="nav-logo">
+            <img src="./assets/logo.svg" alt="simply recipes" />
+          </a>
+          <button class="nav-btn btn">
+            <i class="fas fa-align-justify"></i>
+          </button>
         </div>
-      </nav>
-    </header>
+        <div class="nav-links">
+          <a href="index.html" class="nav-link"> home </a>
+          <a href="about.html" class="nav-link"> about </a>
+          <a href="tags.html" class="nav-link"> tags </a>
+          <a href="recipes.html" class="nav-link"> recipes </a>
+
+          <div class="nav-link contact-link">
+            <a href="contact.html" class="btn"> contact </a>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <!-- main  -->
+     <main class="page">
+           <!-- header -->
+            <header class="hero">
+              <div class="hero-container">
+                <div class="hero-text">
+                  <h1>Simply Recipes</h1>
+                  <h4>no fluff , just recipes</h4>
+                </div>
+              </div>
+            </header>
+            <!-- end of header -->
+            <!-- recipes container -->
+             <section class="recipes-container">
+              <!-- tags container -->
+               <div class="tags-container">
+                <h4>recipes</h4>
+                <div class="tags-list">
+                  <a href="tag-template.html">Beef (1)</a>
+                  <a href="tag-template.html">Breakfast (2)</a>
+                  <a href="tag-template.html">Carrots (3)</a>
+                  <a href="tag-template.html">Food  (4)</a>
+                </div>
+               </div>
+                <!-- recipes list -->
+                <div class="recipes-list">
+                  <!-- single recipe -->
+                   <a href="single-recipe.html" class="recipe">
+                    <img src="./assets/recipes/recipe-1.jpeg" alt="food" class="img recipe-img">
+                    <h5>carne asada</h5>
+                    <p>Prep: 15min | Cook : 5min</p>
+                   </a>
+                   <a href="single-recipe.html" class="recipe">
+                    <img src="./assets/recipes/recipe-2.jpeg" alt="food" class="img recipe-img">
+                    <h5>greek ribs </h5>
+                    <p>Prep: 15min | Cook : 5min</p>
+                   </a>
+                   <a href="single-recipe.html" class="recipe">
+                    <img src="./assets/recipes/recipe-3.jpeg" alt="food" class="img recipe-img">
+                    <h5>vegetable soup</h5>
+                    <p>Prep: 15min | Cook : 5min</p>
+                   </a>
+                   <a href="single-recipe.html" class="recipe">
+                    <img src="./assets/recipes/recipe-4.jpeg" alt="food" class="img recipe-img">
+                    <h5>banana pancakes</h5>
+                    <p>Prep: 15min | Cook : 5min</p>
+                   </a>
+
+                </div>
+             </section>
+            <!-- end of recipes container -->
+    </main>
+     <!-- footer -->
+      <footer class="page-footer">
+        <p>&copy; <span id="date"></span>
+          <span class="footer-logo"> SimplyRecipes </span>
+          Built by <a href="#">Anirudh Parmar</a>
+        </p>
+      </footer>
+    <script src="js/app.js"></script>
   </body>
 </html>
