completed recipes website

--- a/website 3/starter/contact.html
+++ b/website 3/starter/contact.html
@@ -43,7 +43,60 @@
     </nav>
     <!-- main  -->
      <main class="page">
-<h1>Contack</h1>
+  <section class="contact-container">
+    <article class="contact-info">
+      <h3>Want to Get in Touch ?</h3>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis autem facere obcaecati. Doloribus, molestiae eligendi.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, possimus!</p>
+    </article>
+    
+<article>
+  <form class="form contact-form">
+    <!-- single form row -->
+    <div class="form-row">
+      <label for="name" class="form-label">name</label>
+      <input type="text" name="name"  class="form-input"id="name" >
+
+
+      <label for="email" id="name" class="form-label">Email</label>
+      <input type="email" class="form-input" >
+
+      <label for="msg" class="form-label">Your message</label>
+      <textarea name="msg" class="form-input" id="msg"></textarea>
+
+      <button class="btn btn-block" type="submit" >Submit</button>
+    </div>
+  </form>
+</article>
+
+  </section>
+  <section class="featured-recipes">
+     <!-- recipes list -->
+     <div class="recipes-list">
+      <!-- single recipe -->
+       <a href="single-recipe.html" class="recipe">
+        <img src="./assets/recipes/recipe-1.jpeg" alt="food" class="img recipe-img">
+        <h5>carne asada</h5>
+        <p>Prep: 15min | Cook : 5min</p>
+       </a>
+       <a href="single-recipe.html" class="recipe">
+        <img src="./assets/recipes/recipe-2.jpeg" alt="food" class="img recipe-img">
+        <h5>greek ribs </h5>
+        <p>Prep: 15min | Cook : 5min</p>
+       </a>
+       <a href="single-recipe.html" class="recipe">
+        <img src="./assets/recipes/recipe-3.jpeg" alt="food" class="img recipe-img">
+        <h5>vegetable soup</h5>
+        <p>Prep: 15min | Cook : 5min</p>
+       </a>
+       <a href="single-recipe.html" class="recipe">
+        <img src="./assets/recipes/recipe-4.jpeg" alt="food" class="img recipe-img">
+        <h5>banana pancakes</h5>
+        <p>Prep: 15min | Cook : 5min</p>
+       </a>
+
+    </div>
+  </section>
      </main>
      <!-- footer -->
       <footer class="page-footer">
