--- a/website 3/starter/tag-template.html
+++ b/website 3/starter/tag-template.html
@@ -43,7 +43,34 @@
     </nav>
     <!-- main  -->
      <main class="page">
-<h1>Tag Temp</h1>
+      <div>
+        <h4>Beef</h4>
+         <!-- recipes list -->
+         <div class="recipes-list">
+          <!-- single recipe -->
+           <a href="single-recipe.html" class="recipe">
+            <img src="./assets/recipes/recipe-1.jpeg" alt="food" class="img recipe-img">
+            <h5>carne asada</h5>
+            <p>Prep: 15min | Cook : 5min</p>
+           </a>
+           <a href="single-recipe.html" class="recipe">
+            <img src="./assets/recipes/recipe-2.jpeg" alt="food" class="img recipe-img">
+            <h5>greek ribs </h5>
+            <p>Prep: 15min | Cook : 5min</p>
+           </a>
+           <a href="single-recipe.html" class="recipe">
+            <img src="./assets/recipes/recipe-3.jpeg" alt="food" class="img recipe-img">
+            <h5>vegetable soup</h5>
+            <p>Prep: 15min | Cook : 5min</p>
+           </a>
+           <a href="single-recipe.html" class="recipe">
+            <img src="./assets/recipes/recipe-4.jpeg" alt="food" class="img recipe-img">
+            <h5>banana pancakes</h5>
+            <p>Prep: 15min | Cook : 5min</p>
+           </a>
+
+        </div>
+      </div>
      </main>
      <!-- footer -->
       <footer class="page-footer">
